# pve-sentinel

./: .gitignore  AGENTS.md  LICENSE  PROGRESS.md  README.md  SECURITY.md  cli.py  config.yaml.example  pyproject.toml
src/: __init__.py  config.py  cve_scanner.py  database.py  guardrails.py  opencode_client.py  permission_gate.py  proxmox_tools.py  scanner_cli.py  setup.py  tools.py  version.py
src/framework_data/: nist_csf_ai.yaml
systemd/: cve-digest.service  cve-digest.timer  cve-scanner.service  cve-scanner.timer  opencode-server.service
tests/: test_cli.py  test_config.py  test_conversation.py  test_cve_scanner.py  test_database.py  test_db_maintenance.py  test_guardrails.py  test_opencode_client.py  test_permission_gate.py  test_proxmox_tools.py  test_snapshot.py
