[project]
name = "pve-sentinel"
version = "0.1.0"
description = "LLM-driven security advisory agent for Proxmox VE"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "distantgeek"}
]

dependencies = [
    "proxmoxer>=2.1",
    "httpx>=0.28",
    "rich>=13",
    "prompt-toolkit>=3",
    "pyyaml>=6",
    "requests>=2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
