[project]
name = "pve-sentinel"
version = "0.2.0"
description = "LLM-driven security advisory agent for Proxmox VE"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "distantgeek"}
]

dependencies = [
    "proxmoxer>=2.1,<3",
    "httpx>=0.28,<1",
    "rich>=13,<14",
    "prompt-toolkit>=3,<4",
    "pyyaml>=6,<7",
    "pyfiglet>=1,<2",
    "python-dotenv>=1,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.24,<1",
    "pytest-cov>=6,<7",
]

[project.scripts]
pve-sentinel = "cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
