[project]
name = "pve-sentinel"
version = "0.5.0"
description = "LLM-driven security advisory agent for Proxmox VE"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "distantgeek"}
]

dependencies = [
    "proxmoxer>=2.1,<3",
    "httpx>=0.28,<1",
    "rich>=13,<14",
    "prompt-toolkit>=3,<4",
    "pyyaml>=6,<7",
    "pyfiglet>=1,<2",
    "python-dotenv>=1,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.24,<1",
    "pytest-cov>=6,<7",
    "bandit>=1.7,<2",
    "ruff>=0.9,<1",
    "mypy>=1.15,<2",
    "types-PyYAML>=6.0,<7",
]

[project.scripts]
pve-sentinel = "cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "W",    # pycodestyle warnings
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "SIM105",  # use contextlib.suppress (too opinionated)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501", "S101"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
check_untyped_defs = true
warn_return_any = false
warn_unused_ignores = true
strict_optional = true
